minor fix to further make the footer at the bottom of the page (overflow:hidden #content {} main, line 464

--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,7 @@ legend {
 }
 
 #content {
-	
+	overflow:hidden;
 }
 
 #sidebar {
